continued the ejbrace-web project.  Added web.xml and glassfish-web.xml

--- a/ejbrace/ejbrace-web/src/main/webapp/index.html
+++ b/ejbrace/ejbrace-web/src/main/webapp/index.html
@@ -5,6 +5,9 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <h1>Hello World!</h1>
+        <h1>Welcome to EJB Race!</h1>
+        
+        <p><a href="account/">AccountService variable</a></p>
+        
     </body>
 </html>
