trying to get remote call to work. I think I am having network and JVM issues.

--- a/ejbrace/ejbrace-web/src/main/webapp/index.html
+++ b/ejbrace/ejbrace-web/src/main/webapp/index.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Welcome to EJB Race!</h1>
         
-        <p><a href="account/">AccountService variable</a></p>
+        <p><a href="account">AccountService variable</a></p>
         
     </body>
 </html>
